--- a/python-chemistry-intro/src/dsa103/lecture_6/np_pd_exercises/pandas-puzzles.ipynb
+++ b/python-chemistry-intro/src/dsa103/lecture_6/np_pd_exercises/pandas-puzzles.ipynb
@@ -43,14 +43,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -65,14 +68,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2.3.3'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.__version__"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -88,14 +104,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "INSTALLED VERSIONS\n",
+      "------------------\n",
+      "commit                : 9c8bc3e55188c8aff37207a74f1dd144980b8874\n",
+      "python                : 3.11.5\n",
+      "python-bits           : 64\n",
+      "OS                    : Darwin\n",
+      "OS-release            : 24.6.0\n",
+      "Version               : Darwin Kernel Version 24.6.0: Mon Jul 14 11:30:51 PDT 2025; root:xnu-11417.140.69~1/RELEASE_ARM64_T8112\n",
+      "machine               : arm64\n",
+      "processor             : arm\n",
+      "byteorder             : little\n",
+      "LC_ALL                : None\n",
+      "LANG                  : None\n",
+      "LOCALE                : en_US.UTF-8\n",
+      "\n",
+      "pandas                : 2.3.3\n",
+      "numpy                 : 2.3.3\n",
+      "pytz                  : 2025.2\n",
+      "dateutil              : 2.9.0.post0\n",
+      "pip                   : None\n",
+      "Cython                : None\n",
+      "sphinx                : None\n",
+      "IPython               : 9.6.0\n",
+      "adbc-driver-postgresql: None\n",
+      "adbc-driver-sqlite    : None\n",
+      "bs4                   : None\n",
+      "blosc                 : None\n",
+      "bottleneck            : None\n",
+      "dataframe-api-compat  : None\n",
+      "fastparquet           : None\n",
+      "fsspec                : None\n",
+      "html5lib              : None\n",
+      "hypothesis            : None\n",
+      "gcsfs                 : None\n",
+      "jinja2                : None\n",
+      "lxml.etree            : None\n",
+      "matplotlib            : None\n",
+      "numba                 : None\n",
+      "numexpr               : None\n",
+      "odfpy                 : None\n",
+      "openpyxl              : None\n",
+      "pandas_gbq            : None\n",
+      "psycopg2              : None\n",
+      "pymysql               : None\n",
+      "pyarrow               : None\n",
+      "pyreadstat            : None\n",
+      "pytest                : 8.4.2\n",
+      "python-calamine       : None\n",
+      "pyxlsb                : None\n",
+      "s3fs                  : None\n",
+      "scipy                 : None\n",
+      "sqlalchemy            : None\n",
+      "tables                : None\n",
+      "tabulate              : None\n",
+      "xarray                : None\n",
+      "xlrd                  : None\n",
+      "xlsxwriter            : None\n",
+      "zstandard             : None\n",
+      "tzdata                : 2025.2\n",
+      "qtpy                  : None\n",
+      "pyqt5                 : None\n"
+     ]
+    }
+   ],
+   "source": [
+    "pd.show_versions()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -131,14 +218,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  animal  age  visits priority\n",
+      "a    cat  2.5       1      yes\n",
+      "b    cat  3.0       3      yes\n",
+      "c  snake  0.5       2       no\n",
+      "d    dog  NaN       3      yes\n",
+      "e    dog  5.0       2       no\n",
+      "f    cat  2.0       3       no\n",
+      "g  snake  4.5       1       no\n",
+      "h    cat  NaN       1      yes\n",
+      "i    dog  7.0       2       no\n",
+      "j    dog  3.0       1       no\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = {'animal': ['cat', 'cat', 'snake', 'dog', 'dog', 'cat', 'snake', 'cat', 'dog', 'dog'],\n",
+    "        'age': [2.5, 3, 0.5, np.nan, 5, 2, 4.5, np.nan, 7, 3],\n",
+    "        'visits': [1, 3, 2, 3, 2, 3, 1, 1, 2, 1],\n",
+    "        'priority': ['yes', 'yes', 'no', 'yes', 'no', 'no', 'no', 'yes', 'no', 'no']}\n",
+    "\n",
+    "labels = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j']\n",
+    "\n",
+    "df_data = pd.DataFrame(data,index=labels)\n",
+    "print(df_data)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -154,14 +269,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>visits</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>3.437500</td>\n",
+       "      <td>1.900000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>2.007797</td>\n",
+       "      <td>0.875595</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>2.375000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>4.625000</td>\n",
+       "      <td>2.750000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            age     visits\n",
+       "count  8.000000  10.000000\n",
+       "mean   3.437500   1.900000\n",
+       "std    2.007797   0.875595\n",
+       "min    0.500000   1.000000\n",
+       "25%    2.375000   1.000000\n",
+       "50%    3.000000   2.000000\n",
+       "75%    4.625000   2.750000\n",
+       "max    7.000000   3.000000"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_data.describe()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -176,14 +380,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>animal</th>\n",
+       "      <th>age</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>a</th>\n",
+       "      <td>cat</td>\n",
+       "      <td>2.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>b</th>\n",
+       "      <td>cat</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>c</th>\n",
+       "      <td>snake</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>d</th>\n",
+       "      <td>dog</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>e</th>\n",
+       "      <td>dog</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>f</th>\n",
+       "      <td>cat</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>g</th>\n",
+       "      <td>snake</td>\n",
+       "      <td>4.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>h</th>\n",
+       "      <td>cat</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>i</th>\n",
+       "      <td>dog</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>j</th>\n",
+       "      <td>dog</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  animal  age\n",
+       "a    cat  2.5\n",
+       "b    cat  3.0\n",
+       "c  snake  0.5\n",
+       "d    dog  NaN\n",
+       "e    dog  5.0\n",
+       "f    cat  2.0\n",
+       "g  snake  4.5\n",
+       "h    cat  NaN\n",
+       "i    dog  7.0\n",
+       "j    dog  3.0"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_data[[\"animal\", \"age\"]]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -199,14 +504,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>animal</th>\n",
+       "      <th>age</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>d</th>\n",
+       "      <td>dog</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>e</th>\n",
+       "      <td>dog</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>i</th>\n",
+       "      <td>dog</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  animal  age\n",
+       "d    dog  NaN\n",
+       "e    dog  5.0\n",
+       "i    dog  7.0"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_data.iloc[[3,4,8]][[\"animal\", \"age\"]]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -221,14 +585,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>animal</th>\n",
+       "      <th>age</th>\n",
+       "      <th>visits</th>\n",
+       "      <th>priority</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>b</th>\n",
+       "      <td>cat</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>d</th>\n",
+       "      <td>dog</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3</td>\n",
+       "      <td>yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>f</th>\n",
+       "      <td>cat</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  animal  age  visits priority\n",
+       "b    cat  3.0       3      yes\n",
+       "d    dog  NaN       3      yes\n",
+       "f    cat  2.0       3       no"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_data[df_data[\"visits\"]>2]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -432,7 +863,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "DSA103",
    "language": "python",
    "name": "python3"
   },
@@ -446,7 +877,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
