--- a/python-chemistry-intro/src/dsa103/lecture_6/np_pd_exercises/numpy_exercises_A.ipynb
+++ b/python-chemistry-intro/src/dsa103/lecture_6/np_pd_exercises/numpy_exercises_A.ipynb
@@ -33,14 +33,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -573,7 +575,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "DSA103",
    "language": "python",
    "name": "python3"
   },
@@ -587,7 +589,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
