--- a/lecture9/lecture9-material/hypothesis.ipynb
+++ b/lecture9/lecture9-material/hypothesis.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "c6d94d55",
    "metadata": {},
    "outputs": [
@@ -146,7 +146,7 @@
        "4                 2.0                   3  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "d12944cf",
    "metadata": {},
    "outputs": [
@@ -209,13 +209,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "ddc5d2c2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>canonical_smiles</th>\n",
+       "      <th>pchembl_value</th>\n",
+       "      <th>CID</th>\n",
+       "      <th>MolecularWeight</th>\n",
+       "      <th>XLogP</th>\n",
+       "      <th>TPSA</th>\n",
+       "      <th>HBondDonorCount</th>\n",
+       "      <th>HBondAcceptorCount</th>\n",
+       "      <th>RotatableBondCount</th>\n",
+       "      <th>high_logp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>C(=C/C1CCN(Cc2ccccc2)CC1)\\c1noc2ccccc12</td>\n",
+       "      <td>6.68</td>\n",
+       "      <td>9901561</td>\n",
+       "      <td>318.4</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>29.3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>C/C=C1\\[C@H]2C=C(C)C[C@]1(NC1OCC3=C4CC(C)(C)C[...</td>\n",
+       "      <td>6.96</td>\n",
+       "      <td>118715261</td>\n",
+       "      <td>492.6</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>90.8</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>C/C=C1\\[C@H]2C=C(C)C[C@]1(N[C@H]1OC(=O)C3=C4CC...</td>\n",
+       "      <td>5.66</td>\n",
+       "      <td>118715260</td>\n",
+       "      <td>506.6</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>108.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>C=CC(=O)N1C/C(=C\\c2ccc(C)cc2)C(=O)/C(=C/c2ccc(...</td>\n",
+       "      <td>4.74</td>\n",
+       "      <td>24796898</td>\n",
+       "      <td>357.4</td>\n",
+       "      <td>4.4</td>\n",
+       "      <td>37.4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>C=CC(=O)N1C/C(=C\\c2ccc(Cl)cc2Cl)C(=O)/C(=C/c2c...</td>\n",
+       "      <td>4.80</td>\n",
+       "      <td>71720637</td>\n",
+       "      <td>467.2</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>37.4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0                                   canonical_smiles  \\\n",
+       "0           1            C(=C/C1CCN(Cc2ccccc2)CC1)\\c1noc2ccccc12   \n",
+       "1           2  C/C=C1\\[C@H]2C=C(C)C[C@]1(NC1OCC3=C4CC(C)(C)C[...   \n",
+       "2           3  C/C=C1\\[C@H]2C=C(C)C[C@]1(N[C@H]1OC(=O)C3=C4CC...   \n",
+       "3           4  C=CC(=O)N1C/C(=C\\c2ccc(C)cc2)C(=O)/C(=C/c2ccc(...   \n",
+       "4           5  C=CC(=O)N1C/C(=C\\c2ccc(Cl)cc2Cl)C(=O)/C(=C/c2c...   \n",
+       "\n",
+       "   pchembl_value        CID  MolecularWeight  XLogP   TPSA  HBondDonorCount  \\\n",
+       "0           6.68    9901561            318.4    4.5   29.3                0   \n",
+       "1           6.96  118715261            492.6    1.2   90.8                4   \n",
+       "2           5.66  118715260            506.6    1.5  108.0                4   \n",
+       "3           4.74   24796898            357.4    4.4   37.4                0   \n",
+       "4           4.80   71720637            467.2    6.2   37.4                0   \n",
+       "\n",
+       "   HBondAcceptorCount  RotatableBondCount  high_logp  \n",
+       "0                 3.0                   4       True  \n",
+       "1                 5.0                   2      False  \n",
+       "2                 6.0                   2      False  \n",
+       "3                 2.0                   3       True  \n",
+       "4                 2.0                   3       True  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Define high/low lipophilicity groups\n",
-    "df[\"high_logp\"] = df[\"XLogP\"] > 5\n",
+    "df[\"high_logp\"] = df[\"XLogP\"] > 4\n",
     "df.head()\n"
    ]
   },
@@ -229,12 +366,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "5f3d1eea",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "size_high:  90\n",
+      "size_low:  75\n",
+      "mean_high:  6.241611111111112\n",
+      "mean_low:  5.997466666666667\n",
+      "var_high:  1.9922639481897626\n",
+      "var_low:  1.4440759279279278\n"
+     ]
+    }
+   ],
    "source": [
-    "\n"
+    "\n",
+    "group_high = df[df[\"high_logp\"] == True][\"pchembl_value\"]\n",
+    "group_low = df[df[\"high_logp\"] == False][\"pchembl_value\"]\n",
+    "\n",
+    "print(\"size_high: \", group_high.size)\n",
+    "print(\"size_low: \", group_low.size)\n",
+    "\n",
+    "mean_high = group_high.mean()\n",
+    "mean_low = group_low.mean()\n",
+    "\n",
+    "print(\"mean_high: \", mean_high)\n",
+    "print(\"mean_low: \", mean_low)\n",
+    "\n",
+    "var_high = group_high.var()\n",
+    "var_low = group_low.var()\n",
+    "\n",
+    "print(\"var_high: \", var_high)\n",
+    "print(\"var_low: \", var_low)"
    ]
   },
   {
@@ -247,10 +414,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "80db430e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t_value = 1.20, p_value = 0.2319\n"
+     ]
+    }
+   ],
    "source": [
     "# t-test\n",
     "\n",
