--- a/exercises/lecture_9/solution/ecoli_solution.ipynb
+++ b/exercises/lecture_9/solution/ecoli_solution.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c6d94d55",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "id": "abdd9d78",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "id": "0effd90d",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "id": "5b2e580f",
    "metadata": {},
    "outputs": [
@@ -66,7 +66,7 @@
        "(242, 7)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "id": "e8f00482",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 6,
    "id": "dc312e35",
    "metadata": {},
    "outputs": [
@@ -607,7 +607,7 @@
        "19              0.0                 4.0                 3.0            22.0  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
    "id": "5d9196f3",
    "metadata": {},
    "outputs": [
@@ -660,7 +660,7 @@
        "Name: standard_value, dtype: float64"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "c143e665",
    "metadata": {},
    "outputs": [
@@ -697,7 +697,7 @@
        "(85, 15)"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 9,
    "id": "1ef18b1a",
    "metadata": {},
    "outputs": [
@@ -729,7 +729,7 @@
        "Name: standard_value, dtype: float64"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 10,
    "id": "3f36028c",
    "metadata": {},
    "outputs": [
@@ -778,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 11,
    "id": "40cdc914",
    "metadata": {},
    "outputs": [],
@@ -796,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 12,
    "id": "4950ea0c",
    "metadata": {},
    "outputs": [
@@ -804,7 +804,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\jschoer\\AppData\\Local\\Temp\\ipykernel_11172\\3638418093.py:2: SettingWithCopyWarning: \n",
+      "/var/folders/5t/kg4c69h915dbh81tc05d2zxh0000gn/T/ipykernel_9363/3638418093.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -988,7 +988,7 @@
        "14      False  "
       ]
      },
-     "execution_count": 82,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1009,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 13,
    "id": "2a8bbf0e",
    "metadata": {},
    "outputs": [
@@ -1058,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 14,
    "id": "27b2b12a",
    "metadata": {},
    "outputs": [
@@ -1088,7 +1088,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "lecture9",
+   "display_name": "DSA103",
    "language": "python",
    "name": "python3"
   },
@@ -1102,7 +1102,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
