--- a/LifeScienceData/lecture13/RDKIt_Workshop.ipynb
+++ b/LifeScienceData/lecture13/RDKIt_Workshop.ipynb
@@ -975,7 +975,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "DSA103",
+   "display_name": "LifeScienceData",
    "language": "python",
    "name": "python3"
   },
